--- a/household.html
+++ b/household.html
@@ -334,15 +334,18 @@
                                 <!-- single-product end -->
 
                             </div>
-
-                            <div class="button-cart">
-                                <button style="background: #222; color: #fff; width: 180px; height: 50px"
-                                        onclick="window.location.href='pdf/1.pdf'">show all</button>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                <div class="button-cart">
+                    <button style="background: #222; color: #fff; width: 300px; height: 70px; font-size: 25px;"
+                            onclick="window.location.href='pdf/2.pdf'">show more</button>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
