--- a/stationary.html
+++ b/stationary.html
@@ -403,9 +403,11 @@
                             </div>
                         </div>
 
-                        <div class="button-cart">
-                            <button style="background: #222; color: #fff; width: 180px; height: 50px"
-                                    onclick="window.location.href='pdf/1.pdf'">show all</button>
+                        <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                            <div class="button-cart">
+                                <button style="background: #222; color: #fff; width: 300px; height: 70px; font-size: 25px;"
+                                        onclick="window.location.href='pdf/1.pdf'">show more</button>
+                            </div>
                         </div>
 
                     </div>
