--- a/women-clothing.html
+++ b/women-clothing.html
@@ -326,7 +326,7 @@
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Paithani</a></h3>
+                                            <h3><a href="#">Jeggings</a></h3>
                                         </div>
                                     </div>
                                 </div>
