--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,16 @@
 								</div>
 								<div class="contact-method">
 									<h2>+91 9876543210</h2>
-									<span>Call us Today</span>
+									<span>Call us Today [Stationary & Household Products]</span>
+								</div>
+							</div>
+							<div class="single-contact">
+								<div class="contact-icon">
+									<i class="fa fa-phone"></i>
+								</div>
+								<div class="contact-method">
+									<h2>+91 9876543210</h2>
+									<span>Call us Today [Women Clothing]</span>
 								</div>
 							</div>
 							<div class="single-contact">
