--- a/women-clothing.html
+++ b/women-clothing.html
@@ -334,6 +334,58 @@
 
                             </div>
 
+                            <div class="row">
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/women/13.jpg" alt="" />
+                                                <img class="secondary-img" src="img/product/women/13.jpg" alt="" />
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Pants</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/women/14.jpg" alt="" />
+                                                <img class="secondary-img" src="img/product/women/14.jpg" alt="" />
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Jeans</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/women/15.jpg" alt="" />
+                                                <img class="secondary-img" src="img/product/women/15.jpg" alt="" />
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Harlem Pants</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                            </div>
+
                         </div>
                     </div>
                 </div>
