--- a/about.html
+++ b/about.html
@@ -1,169 +1,190 @@
 ﻿<!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>About || SKYMAG</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>About || SKYMAG</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-        <!-- Place favicon.ico in the root directory -->
-		
-		<!-- google fonts  -->
-		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,300,800' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <!-- Place favicon.ico in the root directory -->
 
-		<!-- all css here -->
-		<!-- bootstrap v3.3.6 css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-		<!-- animate css -->
-        <link rel="stylesheet" href="css/animate.css">
-		<!-- jquery-ui.min css -->
-        <link rel="stylesheet" href="css/jquery-ui.min.css">
-		<!-- meanmenu css -->
-        <link rel="stylesheet" href="css/meanmenu.min.css">
-		<!-- owl.carousel css -->
-        <link rel="stylesheet" href="css/owl.carousel.css">
-		<!-- nivo-slider css -->
-        <link rel="stylesheet" href="lib/css/nivo-slider.css">
-		<!-- font-awesome css -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-		<!-- style css -->
-		<link rel="stylesheet" href="style.css">
-		<!-- responsive css -->
-        <link rel="stylesheet" href="css/responsive.css">
-		<!-- modernizr js -->
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-		<!-- w3 js -->
-		<script src="https://www.w3schools.com/lib/w3.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <!-- google fonts  -->
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,300,800' rel='stylesheet' type='text/css'>
 
-        <!-- Add your site or application content here -->
+    <!-- all css here -->
+    <!-- bootstrap v3.3.6 css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- animate css -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- jquery-ui.min css -->
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <!-- meanmenu css -->
+    <link rel="stylesheet" href="css/meanmenu.min.css">
+    <!-- owl.carousel css -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <!-- nivo-slider css -->
+    <link rel="stylesheet" href="lib/css/nivo-slider.css">
+    <!-- font-awesome css -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- style css -->
+    <link rel="stylesheet" href="style.css">
+    <!-- responsive css -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- modernizr js -->
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- w3 js -->
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
-		<!-- header start -->
-		<header class="header-pos">
-			<!-- header-bottom-area start -->
-			<div class="header-bottom-area">
-				<div class="container">
-					<div class="inner-container">
-						<div class="row">
-							<div class="col-md-2 col-sm-4 col-xs-5">
-								<div class="logo" style="margin-bottom: 20px">
-									<a href="index.html"><img src="img/logo-white-text.png" alt="" /></a>
-								</div>
-							</div>
-							<div class="col-md-10 hidden-xs hidden-sm">
-								<div class="main-menu">
-									<nav>
-										<ul>
-											<li><a href="index.html">home</a></li>
-											<li><a href="stationary.html">stationary</a></li>
-											<li><a href="household.html">household</a></li>
-											<li><a href="women-clothing.html">women clothing</a></li>
-											<li><a href="about.html">about</a></li>
-											<li><a href="contact.html">contact</a></li>
-										</ul>
-									</nav>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- header-bottom-area end -->
-			<!-- mobile-menu-area start -->
-			<div class="mobile-menu-area visible-xs visible-sm">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="mobile-menu">
-								<nav id="dropdown">
-									<ul>
-										<li><a href="index.html">home</a></li>
-										<li><a href="stationary.html">stationary</a></li>
-										<li><a href="household.html">household</a></li>
-										<li><a href="women-clothing.html">women clothing</a></li>
-										<li><a href="about.html">about</a></li>
-										<li><a href="contact.html">contact</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- mobile-menu-area end -->
-		</header>
-		<!-- header end -->
-		
+<!-- Add your site or application content here -->
 
-		<!-- breadcrumb-area start -->
-		<div class="breadcrumb-area" style="background: rgba(0, 0, 0, 0) url(img/bread/4.jpg) no-repeat scroll center top;">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="breadcrumb-list">
-							<h1>About us</h1>
-							<ul>
-								<li><a href="index.html">home</a> <span class="divider">|</span></li>
-								<li>About us</li>
-							</ul>							
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- breadcrumb-area end -->
-		<!-- about-area start -->
-		<div class="about-area pad-60">
-			<div class="container">
-				<div class="row">
-					<!--<div class="col-md-12">-->
-						<!--<div class="about-img">-->
-							<!--<img src="img/about.jpg" alt="" />-->
-						<!--</div>-->
-					<!--</div>-->
-					<div class="col-md-12">
-						<div class="about-text">
-							<h2>Our Story</h2>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-							<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-						</div>						
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- about-area end -->
+<!-- header start -->
+<header class="header-pos">
+    <!-- header-bottom-area start -->
+    <div class="header-bottom-area">
+        <div class="container">
+            <div class="inner-container">
+                <div class="row">
+                    <div class="col-md-2 col-sm-4 col-xs-5">
+                        <div class="logo" style="margin-bottom: 20px">
+                            <a href="index.html"><img src="img/logo-white-text.png" alt=""/></a>
+                        </div>
+                    </div>
+                    <div class="col-md-10 hidden-xs hidden-sm">
+                        <div class="main-menu">
+                            <nav>
+                                <ul>
+                                    <li><a href="index.html">home</a></li>
+                                    <li><a href="stationary.html">stationary</a></li>
+                                    <li><a href="household.html">household</a></li>
+                                    <li><a href="women-clothing.html">women clothing</a></li>
+                                    <li><a href="about.html">about</a></li>
+                                    <li><a href="contact.html">contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- header-bottom-area end -->
+    <!-- mobile-menu-area start -->
+    <div class="mobile-menu-area visible-xs visible-sm">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="mobile-menu">
+                        <nav id="dropdown">
+                            <ul>
+                                <li><a href="index.html">home</a></li>
+                                <li><a href="stationary.html">stationary</a></li>
+                                <li><a href="household.html">household</a></li>
+                                <li><a href="women-clothing.html">women clothing</a></li>
+                                <li><a href="about.html">about</a></li>
+                                <li><a href="contact.html">contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- mobile-menu-area end -->
+</header>
+<!-- header end -->
 
-		<div w3-include-html="include\footer.html"></div>
 
-		<!-- all js here -->
-		<!-- jquery latest version -->
-		<script>
-            w3.includeHTML();
-		</script>
-        <script src="js/vendor/jquery-1.12.0.min.js"></script>
-		<!-- bootstrap js -->
-        <script src="js/bootstrap.min.js"></script>
-		<!-- owl.carousel js -->
-        <script src="js/owl.carousel.min.js"></script>
-		<!-- meanmenu js -->
-        <script src="js/jquery.meanmenu.js"></script>
-		<!-- jquery-ui js -->
-        <script src="js/jquery-ui.min.js"></script>
-		<!-- nivo.slider js -->
-		<script src="lib/js/jquery.nivo.slider.pack.js"></script>		
-		<script src="lib/js/nivo-active.js"></script>		
-		<!-- wow js -->
-        <script src="js/wow.min.js"></script>			
-		<!-- plugins js -->
-        <script src="js/plugins.js"></script>
-		<!-- main js -->
-        <script src="js/main.js"></script>
-    </body>
+<!-- breadcrumb-area start -->
+<div class="breadcrumb-area" style="background: rgba(0, 0, 0, 0) url(img/bread/4.jpg) no-repeat scroll center top;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="breadcrumb-list">
+                    <h1>About us</h1>
+                    <ul>
+                        <li><a href="index.html">home</a> <span class="divider">|</span></li>
+                        <li>About us</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- breadcrumb-area end -->
+<!-- about-area start -->
+<div class="about-area pad-60">
+    <div class="container">
+        <div class="row">
+            <!--<div class="col-md-12">-->
+            <!--<div class="about-img">-->
+            <!--<img src="img/about.jpg" alt="" />-->
+            <!--</div>-->
+            <!--</div>-->
+            <div class="col-md-12">
+                <div class="about-text">
+                    <h1>Our Story</h1>
+                    <br>
+                    <h2>House Keeping Material</h2>
+                    <p>All your cleaning &amp; House-keeping needs for all types of Residences, Hotels, Hospitals,
+                        Industries, and Call Centers &amp; Corporate under one roof.</p>
+                    <p>We are leading wholesalers &amp; retailers of cleaning products and equipments of all leading
+                        manufactures, which can be used in Residences, Hotels, Hospital, Malls and all kind of
+                        industries and corporate offices.</p>
+                    <p>We have a huge variety of products in all sized, shapes, designs. We can deliver all items
+                        throughout the India through our network.</p>
+                    <p>You can find the original products of all leading manufacture at very reasonable prices. Our
+                        service speak for their time and reliability and therefore find a great usage value in every
+                        household &amp; Institution.</p>
+                    <br>
+                    <h2>Office Stationery Product</h2>
+                    <p>Supplier &amp; Wholesaler of a wide range of products which include Office Stationery Product
+                        such as Office File Holding Clip Board, Plastic Folder, Computer Stationery, Office White Paper,
+                        Office File, Office Coloured Paper and many more items.</p>
+                    <br>
+                    <h2>Clothing</h2>
+                    <p>We are leading wholesalers &amp; retailers of ladies wear. We have a huge variety of products in
+                        all sized, shapes, designs. We can deliver all items throughout the India through our
+                        network.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- about-area end -->
+
+<div w3-include-html="include\footer.html"></div>
+
+<!-- all js here -->
+<!-- jquery latest version -->
+<script>
+    w3.includeHTML();
+</script>
+<script src="js/vendor/jquery-1.12.0.min.js"></script>
+<!-- bootstrap js -->
+<script src="js/bootstrap.min.js"></script>
+<!-- owl.carousel js -->
+<script src="js/owl.carousel.min.js"></script>
+<!-- meanmenu js -->
+<script src="js/jquery.meanmenu.js"></script>
+<!-- jquery-ui js -->
+<script src="js/jquery-ui.min.js"></script>
+<!-- nivo.slider js -->
+<script src="lib/js/jquery.nivo.slider.pack.js"></script>
+<script src="lib/js/nivo-active.js"></script>
+<!-- wow js -->
+<script src="js/wow.min.js"></script>
+<!-- plugins js -->
+<script src="js/plugins.js"></script>
+<!-- main js -->
+<script src="js/main.js"></script>
+</body>
 </html>
