--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@
         var mapOptions = {
             zoom: 15,
             scrollwheel: false,
-            center: new google.maps.LatLng(18.5204, 73.8567)
+            center: new google.maps.LatLng(18.4808484, 73.8569499)
         };
 
         var map = new google.maps.Map(document.getElementById('googleMap'),
