--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
             <div class="col-md-8">
                 <div class="contact-form">
                     <div class="message-title">
-                        <h1>drop us a message</h1>
+                        <h1>Inquiry form</h1>
                         <p>We have a great team for supporting our customers. Fill the form to get Great support.</p>
                     </div>
                     <div class="row">
