--- a/stationary.html
+++ b/stationary.html
@@ -278,7 +278,7 @@
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Staples</a></h3>
+                                            <h3><a href="#">Visiting & I Cards</a></h3>
                                         </div>
                                     </div>
                                 </div>
@@ -401,12 +401,33 @@
                                 <!-- single-product end -->
 
                             </div>
+
+                            <div class="row">
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/stationary/17.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/stationary/17.jpg" alt=""/>
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Rubber stamp</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                            </div>
                         </div>
 
                         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
                             <div class="button-cart">
                                 <button style="background: #222; color: #fff; width: 300px; height: 70px; font-size: 25px;"
-                                        onclick="window.location.href='pdf/1.pdf'">show more</button>
+                                        onclick="window.location.href='pdf/1.pdf'">show more
+                                </button>
                             </div>
                         </div>
 
