--- a/stationary.html
+++ b/stationary.html
@@ -190,7 +190,7 @@
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Eraser</a></h3>
+                                            <h3><a href="#">Lace Printing</a></h3>
                                         </div>
                                     </div>
                                 </div>
