--- a/about.html
+++ b/about.html
@@ -132,11 +132,7 @@
             <div class="col-md-12">
                 <div class="about-text">
                     <h2>About us</h2>
-                    <p>We are pleased to introduce Skymag Technoserve Pvt. Ltd., as a high-tech organization to provide
-                        Facility &amp; Property Management , infrastructure solutions ,Engineering Services, services to
-                        various Electronic &amp;Telecom sectors.And also doing Trading in commercial and industrial
-                        items. We are the channel partner of Bluescope Av Technologies Pvt. Ltd</p>
-
+                    <p>We are pleased to introduce skymag.in, as commercial ecommerse website.</p>
                     <p>We have started as a small proprietorship company in the year 2007. Our organization grew to
                         become Private Limited firm in March 2017 and spread our wings to give our esteemed services to
                         all over the country.</p>
@@ -145,20 +141,6 @@
                         fields such as manufacturing, project management, software awareness, consumer and industrial
                         electronics in telecom sector and Mechanical etc. are involved in the activities of the
                         company.</p>
-                    <br>
-                    <h2>Our Values</h2>
-                    <p>We strive to give Eco Friendly and cost effective solutions and emphasise on gathering trust.</p>
-                    <br>
-                    <h2>Our Vision</h2>
-                    <p>&quot;Change is a sign of vitality and growth. We at Skymag continuously monitor the change
-                        happening in our dynamic environment and respond to that change by facilitating and providing
-                        services that adapt as per the dynamics of the environment. This constant adaptation to change
-                        is what gives us the ability to think global with the speed and strategic flexibility required
-                        to achieve set goals.&quot;</p>
-                    <br>
-                    <h2>Our Mission</h2>
-                    <p>We believe in delivering optimum services with the combination of latest technologies. In a cost
-                        effective manner taking into consideration our clients requirements.</p>
                 </div>
 
                 <div class="col-md-12 col-sm-12 col-xs-12 text-center" style="margin-top: 50px">
