--- a/household.html
+++ b/household.html
@@ -170,12 +170,12 @@
                                     <div class="single-product">
                                         <div class="product-img">
                                             <a href="#">
-                                                <img src="img/product/household/3.jpg" alt=""/>
-                                                <img class="secondary-img" src="img/product/household/3.jpg" alt=""/>
+                                                <img src="img/product/household/6.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/household/6.jpg" alt=""/>
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Dish Wash</a></h3>
+                                            <h3><a href="#">Dry Mop</a></h3>
                                         </div>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Glass Cleaner</a></h3>
+                                            <h3><a href="#">Wringer Trolley</a></h3>
                                         </div>
                                     </div>
                                 </div>
@@ -222,12 +222,12 @@
                                     <div class="single-product">
                                         <div class="product-img">
                                             <a href="#">
-                                                <img src="img/product/household/6.jpg" alt=""/>
-                                                <img class="secondary-img" src="img/product/household/6.jpg" alt=""/>
+                                                <img src="img/product/household/3.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/household/3.jpg" alt=""/>
                                             </a>
                                         </div>
                                         <div class="product-content">
-                                            <h3><a href="#">Dry Mop</a></h3>
+                                            <h3><a href="#">Dish Wash</a></h3>
                                         </div>
                                     </div>
                                 </div>
