--- a/stationary.html
+++ b/stationary.html
@@ -402,6 +402,74 @@
 
                             </div>
 
+                            <div class="row">
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/stationary/18.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/stationary/18.jpg" alt=""/>
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Computer Stationary</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/stationary/19.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/stationary/19.jpg" alt=""/>
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Calculator</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/stationary/20.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/stationary/20.jpg" alt=""/>
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Cutting Scissor</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                                <!-- single-product start -->
+                                <div class="col-md-3 col-sm-3">
+                                    <div class="single-product">
+                                        <div class="product-img">
+                                            <a href="#">
+                                                <img src="img/product/stationary/21.jpg" alt=""/>
+                                                <img class="secondary-img" src="img/product/stationary/21.jpg" alt=""/>
+                                            </a>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3><a href="#">Plastic Folder</a></h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- single-product end -->
+
+                            </div>
+
                         </div>
 
                         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
