--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                     <div class="single-product">
                         <div class="product-img">
                             <a href="household.html">
-                                <img src="img/product/household/3.jpg" alt=""/>
-                                <img class="secondary-img" src="img/product/household/3.jpg" alt=""/>
+                                <img src="img/product/household/6.jpg" alt=""/>
+                                <img class="secondary-img" src="img/product/household/6.jpg" alt=""/>
                             </a>
 
                             <div class="product-action">
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                         <div class="product-content">
-                            <h3><a href="household.html">Dish Wash</a></h3>
+                            <h3><a href="household.html">Dry Mop</a></h3>
                         </div>
                     </div>
                 </div>
