--- a/about.html
+++ b/about.html
@@ -132,15 +132,20 @@
             <div class="col-md-12">
                 <div class="about-text">
                     <h2>About us</h2>
-                    <p>We are pleased to introduce skymag.in, as commercial ecommerse website.</p>
-                    <p>We have started as a small proprietorship company in the year 2007. Our organization grew to
-                        become Private Limited firm in March 2017 and spread our wings to give our esteemed services to
-                        all over the country.</p>
-                    <p>Our company has strong fundamentals with professionals from various industries having rich
-                        experience in their domains coming together to setup the company. The professionals from various
-                        fields such as manufacturing, project management, software awareness, consumer and industrial
-                        electronics in telecom sector and Mechanical etc. are involved in the activities of the
-                        company.</p>
+                    <p>We are pleased to introduce Skymag Technoserve Pvt. Ltd., as a high-tech organization to provide Facility &amp; Property Management , infrastructure solutions ,Engineering Services, services to various Electronic &amp;Telecom sectors.And also doing Trading in commercial and industrial items. We are the channel partner of Bluescope Av Technologies Pvt. Ltd</p>
+                    <p>We have started as a small proprietorship company in the year 2007. Our organization grew to become Private Limited firm in March 2017 and spread our wings to give our esteemed services to all over the country.</p>
+                    <br>
+                    <h2>House Keeping Material</h2>
+                    <p>All your cleaning &amp; House-keeping needs for all types of Residences, Hotels, Hospitals, Industries, and Call Centers &amp; Corporate under one roof.</p>
+                    <p>We are leading wholesalers &amp; retailers of cleaning products and equipments of all leading manufactures, which can be used in Residences, Hotels, Hospital, Malls and all kind of industries and corporate offices.</p>
+                    <p>We have a huge variety of products in all sized, shapes, designs. We can deliver all items throughout the India through our network.</p>
+                    <p>You can find the original products of all leading manufacture at very reasonable prices. Our service speak for their time and reliability and therefore find a great usage value in every household &amp; Institution.</p>
+                    <br>
+                    <h2>Office Stationery Product</h2>
+                    <p>Supplier &amp; Wholesaler of a wide range of products which include Office Stationery Product such as Office File Holding Clip Board, Plastic Folder, Computer Stationery, Office White Paper, Office File, Office Coloured Paper and many more items.</p>
+                    <br>
+                    <h2>Clothing</h2>
+                    <p>We are leading wholesalers &amp; retailers of ladies wear. We have a huge variety of products in all sized, shapes, designs. We can deliver all items throughout the India through our network.</p>
                 </div>
 
                 <div class="col-md-12 col-sm-12 col-xs-12 text-center" style="margin-top: 50px">
