--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,8 @@
                         <p>We have a great team for supporting our customers. Fill the form to get Great support.</p>
                     </div>
                     <div class="row">
-                        <form action="mail.php" method="POST">
+                        <form action="https://formspree.io/info@skymag.in" method="POST">
+
                             <div class="input-filed">
                                 <div class="col-md-6">
                                     <input name="name" type="text" placeholder="Your Name"/>
@@ -143,6 +144,7 @@
                                     <input name="subject" type="text" placeholder="Your Subject"/>
                                 </div>
                             </div>
+
                             <div class="col-md-12">
                                 <div class="contact-textarea">
                                     <textarea name="message" id="Message" cols="30" rows="10"
